--- a/style.css
+++ b/style.css
@@ -252,3 +252,15 @@ body.homepage main {
   width: 100vw;
   flex-direction: column;
 }
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+body.homepage .hero {
+  padding-top: 0 !important;
+  margin-top: 0 !important;
+}
+
+body.homepage .hero-logo {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
